--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
             <nav>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="munnar.html">Munnar Branch</a></li>
+                    <li><a href="munnar.html">20 Acre Branch</a></li>
                     <li><a href="anachal.html">Anachal Branch</a></li>
                     <li><a href="tours.html">Tour Packages</a></li>
                     <li><a href="about.html" class="active">About Us</a></li>
