--- a/tours.html
+++ b/tours.html
@@ -165,7 +165,7 @@
             <nav>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="munnar.html">Munnar Branch</a></li>
+                    <li><a href="munnar.html">20 Acre Branch</a></li>
                     <li><a href="anachal.html">Anachal Branch</a></li>
                     <li><a href="tours.html" class="active">Tour Packages</a></li>
                     <li><a href="about.html">About Us</a></li>
