--- a/about.html
+++ b/about.html
@@ -1239,9 +1239,9 @@
                 <!-- Story Content -->
                 <div class="story-content">
                     <h2>Rooted in Kerala's Spice Tradition</h2>
-                    <p>KVS Spices & Traders was founded in 1987 by the late KV Joseph, a visionary local farmer with a passion for quality and fair trade. What began as a small spice trading business has grown into a respected enterprise spanning two locations and over 20 acres in Munnar's spice heartland.</p>
+                    <p>KVS Spices & Traders was founded in 1986 by the late KV Joseph, a visionary local farmer with a passion for quality and fair trade. What began as a small spice trading business has grown into a respected enterprise spanning into three locations.</p>
                     <p>Our journey started when KV Joseph recognized the challenges faced by local spice farmers in getting fair prices for their produce. He established KVS with a vision to create a direct market link between farmers and buyers, ensuring quality products while supporting the local agricultural community.</p>
-                    <p>Today, after 38+ years in business, KVS Spices & Traders is proudly managed by Abison Joseph, who continues his father's legacy of excellence, community support, and innovation in the spice trade. Under his leadership, we've expanded our services to include tourism while maintaining our core values of quality, integrity, and community development.</p>
+                    <p>Today, after 40+ years in business, KVS Spices & Traders is proudly managed by Abyson Joseph, who continues his father's legacy of excellence, community support, and innovation in the spice trade. Under his leadership, we've expanded our services to include tourism while maintaining our core values of quality, integrity, and community development.</p>
                 </div>
                 
                 <!-- Story Image -->
@@ -1274,7 +1274,7 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Major Expansion</h3>
-                        <p>Acquired the 20-acre facility in Munnar, establishing our main processing and trading center with advanced cardamom drying and grading facilities.</p>
+                        <p>Acquired the 20-acre facility in 20-acre, establishing our main processing and trading center with advanced cardamom drying and grading facilities.</p>
                     </div>
                     <div class="timeline-year">1995</div>
                 </div>
@@ -1288,22 +1288,21 @@
                     <div class="timeline-year">2005</div>
                 </div>
 
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>New Leadership Era</h3>
+                        <p>Abyson Joseph takes over leadership, bringing fresh innovations while maintaining the company's core values and commitment to quality and community.</p>
+                    </div>
+                    <div class="timeline-year">2022</div>
+                </div>
+
                 <!-- Timeline Item 4 -->
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Service Diversification</h3>
                         <p>Opened the Anachal retail outlet and launched comprehensive tourism services, creating a one-stop destination for visitors to Kerala.</p>
                     </div>
-                    <div class="timeline-year">2015</div>
-                </div>
-
-                <!-- Timeline Item 5 -->
-                <div class="timeline-item">
-                    <div class="timeline-content">
-                        <h3>New Leadership Era</h3>
-                        <p>Abison Joseph takes over leadership, bringing fresh innovations while maintaining the company's core values and commitment to quality and community.</p>
-                    </div>
-                    <div class="timeline-year">2022</div>
+                    <div class="timeline-year">2024</div>
                 </div>
             </div>
         </div>
@@ -1340,12 +1339,12 @@
                         <img src="abison.jpg" alt="Abison Joseph - Director of KVS Spices & Traders" loading="lazy" />
                     </div>
                     <div class="founder-info">
-                        <h3>Abison Joseph</h3>
+                        <h3>Abyson Joseph</h3>
                         <span class="founder-title">Director & CEO</span>
                         <div class="founder-bio">
-                            <p>Abison Joseph, son of founder KV Joseph, took over the family business in 2022. With a background in business management and a deep understanding of the spice trade inherited from his father, Abison has successfully expanded KVS Spices & Traders while maintaining its core values.</p>
+                            <p>Abyson Joseph, son of founder KV Joseph, took over the family business in 2022. With a background in business management and a deep understanding of the spice trade inherited from his father, Abison has successfully expanded KVS Spices & Traders while maintaining its core values.</p>
                             <p>Under his leadership, the company opened its Anachal retail outlet and diversified into tourism services, creating new opportunities for growth while strengthening connections with the local farming community. He has also modernized many of the company's operations while preserving traditional processing methods.</p>
-                            <p>Abison is committed to sustainable farming practices, technological innovation in spice processing, and creating fair opportunities for the next generation of spice farmers in Kerala. His vision extends beyond business success to community development and environmental stewardship.</p>
+                            <p>Abyson is committed to sustainable farming practices, technological innovation in spice processing, and creating fair opportunities for the next generation of spice farmers in Kerala. His vision extends beyond business success to community development and environmental stewardship.</p>
                         </div>
                     </div>
                 </div>
