--- a/anachal.html
+++ b/anachal.html
@@ -1514,24 +1514,24 @@
             <div class="tab-content" id="local-tab">
                 <div class="products-grid">
                     <div class="product-card">
-                        <img src="" alt="Handmade Chocolates" loading="lazy">
+                        <img src="handmadechocolates.jpg" alt="Handmade Chocolates" loading="lazy">
                         <div class="product-title">Handmade Chocolates</div>
                         <div class="product-description">Artisanal chocolates made with local cocoa and spices, a perfect Kerala delicacy</div>
                     </div>
                     <div class="product-card">
-                        <img src="honey.jpg" alt="Forest Honey" loading="lazy">
+                        <img src="wildforesthoney.jpg" alt="Forest Honey" loading="lazy">
                         <div class="product-title">Wild Forest Honey</div>
                         <div class="product-description">Pure honey collected from Western Ghats forests, natural and unprocessed</div>
                     </div>
                     <div class="product-card">
-                        <img src="localspice.jpg" alt="Kerala Garam Masala" loading="lazy">
-                        <div class="product-title">Kerala Garam Masala</div>
-                        <div class="product-description">Traditional spice blend perfect for Kerala cuisine, made with authentic recipes</div>
+                        <img src="vine.jpg" alt="Kerala Garam Masala" loading="lazy">
+                        <div class="product-title">Different types of Vines</div>
+                        <div class="product-description">Traditional drinking vine, perfected by time-honored vintner techniques.</div>
                     </div>
                     <div class="product-card">
-                        <img src="pickle.jpg" alt="Mango Pickle" loading="lazy">
-                        <div class="product-title">Kerala Mango Pickle</div>
-                        <div class="product-description">Traditional mango pickle made with authentic spices and time-honored methods</div>
+                        <img src="perfumes.jpg" alt="Mango Pickle" loading="lazy">
+                        <div class="product-title">Perfumes</div>
+                        <div class="product-description">Classic fragrance blended with natural extracts and age-old perfumery techniques.</div>
                     </div>
                     <div class="product-card">
                         <img src="cashew.jpg" alt="Roasted Cashews" loading="lazy">
@@ -1539,9 +1539,9 @@
                         <div class="product-description">Premium cashews roasted to perfection with local spices and traditional techniques</div>
                     </div>
                     <div class="product-card">
-                        <img src="banana-chips.jpg" alt="Banana Chips" loading="lazy">
-                        <div class="product-title">Kerala Banana Chips</div>
-                        <div class="product-description">Crispy banana chips made from fresh Kerala bananas, a traditional snack favorite</div>
+                        <img src="ayurvedicoils.jpg" alt="Banana Chips" loading="lazy">
+                        <div class="product-title">Ayurvedic Oils</div>
+                        <div class="product-description">Ayurvedic oils made from pure Kerala herbs, a traditional wellness favorite.</div>
                     </div>
                 </div>
             </div>
@@ -1613,27 +1613,21 @@
             <div class="gallery-grid">
                 <div class="gallery-item">
                     <img src="anachalimg.jpg" alt="KVS Anachal Store Exterior" loading="lazy" />
-                    <div class="gallery-caption">Modern Storefront</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="spice-display.jpg" alt="Premium Spice Display" loading="lazy" />
-                    <div class="gallery-caption">Premium Spice Collection</div>
+                    <img src="shop1.jpg" alt="Premium Spice Display" loading="lazy" />
                 </div>
                 <div class="gallery-item">
-                    <img src="tourdesk.jpg" alt="Professional Tour Booking Desk" loading="lazy" />
-                    <div class="gallery-caption">Professional Tour Booking Desk</div>
+                    <img src="shop2.jpg" alt="Professional Tour Booking Desk" loading="lazy" />
                 </div>
                 <div class="gallery-item">
-                    <img src="spice-display.jpg" alt="Authentic Spices Display" loading="lazy" />
-                    <div class="gallery-caption">Authentic Kerala Spices</div>
+                    <img src="shop3..jpg" alt="Authentic Spices Display" loading="lazy" />
                 </div>
                 <div class="gallery-item">
-                    <img src="customer-service.jpg" alt="Friendly Customer Service" loading="lazy" />
-                    <div class="gallery-caption">Expert Customer Service</div>
+                    <img src="shop4..jpg" alt="Friendly Customer Service" loading="lazy" />
                 </div>
                 <div class="gallery-item">
-                    <img src="local-products.jpg" alt="Local Specialty Products" loading="lazy" />
-                    <div class="gallery-caption">Local Specialty Products</div>
+                    <img src="shop5.jpg" alt="Local Specialty Products" loading="lazy" />
                 </div>
             </div>
         </div>
@@ -1712,8 +1706,7 @@
 
                 <!-- Google Maps Section -->
                 <div class="map-container">
-                    <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125525.30030296426!2d77.00174583217794!3d10.085069974947842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0799794d099a6d%3A0x63250e5553c7e0c!2sMunnar%2C%20Kerala!5e0!3m2!1sen!2sin!4v1621500015000!5m2!1sen!2sin"
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4844.636236524675!2d77.03465247584082!3d10.024036372618996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0799001b6f00af%3A0x99de02030bb42c41!2sKVS%20SPICES%20AND%20TRADERS!5e1!3m2!1sen!2sin!4v1748605180823!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         width="100%" 
                         height="500" 
                         style="border:0;" 
