--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@
                 <!-- Statistics -->
                 <div class="intro-stats">
                     <div class="stat-item">
-                        <span class="stat-number">38+</span>
+                        <span class="stat-number">40+</span>
                         <span class="stat-text">Years of Excellence</span>
                     </div>
                     <div class="stat-item">
@@ -1565,8 +1565,8 @@
                         <div class="card-badge">Main Facility</div>
                     </div>
                     <div class="card-content">
-                        <h3>KVS Munnar</h3>
-                        <p>Our flagship 20-acre shop in Munnar is the heart of KVS Spices & Traders, featuring comprehensive spice trading services, cardamom processing, and direct farmer partnerships.</p>
+                        <h3>KVS Spices and Traders 20-acre</h3>
+                        <p>Our flagship 20-acre shop in 20-acre is the heart of KVS Spices & Traders, featuring comprehensive spice trading services, cardamom processing, and direct farmer partnerships.</p>
                         <ul class="card-features">
                             <li><i class="fas fa-check-circle"></i> Retail Grocery Store</li>
                             <li><i class="fas fa-check-circle"></i> Cardamom Processing Unit</li>
@@ -1636,8 +1636,8 @@
                 <!-- About Text -->
                 <div class="about-text">
                     <h2>Our Heritage</h2>
-                    <p>Founded in 1987 by the late KV Joseph, KVS Spices & Traders has grown from a small spice trading business to a respected enterprise spanning two locations in Munnar's spice heartland.</p>
-                    <p>Today, after 38+ years in business, we're proudly managed by Abison Joseph, who continues his father's legacy of excellence, community support, and innovation in the spice trade.</p>
+                    <p>Founded in 1986 by the late KV Joseph, KVS Spices & Traders has grown from a small spice trading business to a respected enterprise spanning two locations in Munnar's spice heartland.</p>
+                    <p>Today, after 40+ years in business, we're proudly managed by Abyson Joseph, who continues his father's legacy of excellence, community support, and innovation in the spice trade.</p>
                     <a href="about.html" class="btn">Learn Our Story</a>
                 </div>
 
@@ -1653,7 +1653,7 @@
                     <div class="founder-img">
                         <img src="abison.jpg" alt="Abison Joseph - Director" loading="lazy" />
                         <div class="founder-info">
-                            <h3>Abison Joseph</h3>
+                            <h3>Abyson Joseph</h3>
                             <p>Director</p>
                         </div>
                     </div>
@@ -1832,7 +1832,7 @@
             
             <!-- Copyright -->
             <div class="copyright">
-                <p>&copy; 2025 KVS Spices & Traders. All Rights Reserved. | Designed with ❤️ for Kerala's Spice Heritage</p>
+                <p>&copy; 2025 KVS Spices & Traders. All Rights Reserved. | Designed by Mathew selvi</p>
             </div>
         </div>
     </footer>
